2017-05-12  Per Bothner  <per@bothner.com>

	* MappedArrayType.java: New class, extends ObjectType.

2017-04-30  Per Bothner  <per@bothner.com>

	* ClassMethods.java: Accept any CharSequence as a string.
	* CompileBuildObject.java: Likewise.
	* Invoke.java: Likewise.

2017-04-01  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validate): Optimize 'class' static pseudo-field.
	* SlotGet.java (validateApplySlotGet): Don't optimize 'class' here.
	This fixes problem of T:class where T is a not-yet-compiled ClassExp.

2017-01-06  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java (define): Check SourceName attribute.

	* ClassMemberLocation.java: Allow lazy ClassType creation, from name.
	(<init>(Object,String,String)): New constructor.
	(getDeclaringClassname): New method.
	(type): Make private.
	* FieldLocation.java: Make use of supertype changes.
	* StaticFieldLocation.java: Likewise.

2016-12-03  Per Bothner  <per@bothner.com>

	* MultValuesType.java (isCompatibleWithValue): Use Type.isSame.

	* MakeAnnotation.java (validate):  Use language-type for annotaton value.

	* CompileReflect.java: Use CharSequence instead of String-orFString.
	* SlotGet.java: Likewise.
	* SlotSet.java: Likewise.

	* CompileInvoke.java (validateNamedInvoke): Handle parameterized List type.

2016-11-27  Per Bothner  <per@bothner.com>

	* CompileInvoke.java: Fix two bugs relating to splices.
	(validateNamedInvoke): Fix adjustment of splice start.
	Also, call PrimProcedure.canCompile to check if we can.

2016-04-21  Per Bothner  <per@bothner.com>

	* ClassMethods.java (removeRedundantMethods): Use new Type.isSame.
	This fixes Savannah bug #47725 "Same method candidate found twice
	causing warning".

2016-03-08  Per Bothner  <per@bothner.com>

	* CompileReflect.java (validateApplySlotGet):
	If no slot is found, emit warning, not error.
	Don't emit either if type is 'dynamic'.

2016-02-11  Per Bothner  <per@bothner.com>
